=== HEAD

* Support ActiveSupport 5 in pg_interval extension when weeks/hours are used in ActiveSupport::Duration objects (chanks) (#1233)

* Support IntegerMigrator :relative option, for running only the specified number of migrations up or down (jeremyevans)

* Make the touch plugin also touch associations on create in addition to update and delete (jeremyevans)

* Add :allow_manual_update timestamps plugin option for not overriding a manually set update timestamp (jeremyevans)

* Add Sequel.[] as an alias to Sequel.expr, for easier expression creation (jeremyevans)

* Add PostgreSQL full_text_search :to_tsquery=>:phrase option, for using PostgreSQL 9.6+ full text search phrase searching (jeremyevans)

* Add JSONBOp#insert in pg_json_ops extension, for jsonb_insert support on PostgreSQL 9.6+ (jeremyevans)

* Support add_column :if_not_exists option on PostgreSQL 9.6+ (jeremyevans)

=== 4.38.0 (2016-09-01)

* Support :driver_options option when using the postgres adapter with pg driver (jeremyevans)

* Don't use after commit/rollback database hooks if the model instance methods are not overridden (jeremyevans)

* Add SQL::NumericMethods#coerce, allowing code such as Sequel.expr{1 - x} (jeremyevans)

* Support ** operator for exponentiation on expressions, similar to +, -, *, and / (jeremyevans)

* Add Sequel::SQLTime.date= to set the date used for SQLTime instances (jeremyevans)

=== 4.37.0 (2016-08-01)

* Add support for regular expression matching on Oracle 10g+ using REGEXP_LIKE (johndcaldwell) (#1221)

* Recognize an additional disconnect error in the postgres adapter (jeremyevans)

* Make connection pool remove connections for disconnect errors not raised as DatabaseDisconnectError (jeremyevans)

* Support mysql2 0.4+ native prepared statements and bound variables (jeremyevans)

* Add Database#values for VALUES support on SQLite 3.8.3+ (jeremyevans)

* Support create_view :columns option on SQLite 3.9.0+ (jeremyevans)
